--- a/package.json
+++ b/package.json
@@ -7,11 +7,21 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "nuxt": "^3.15.4",
+    "nuxt": "3.8.2",
+    "typescript": "5.1.6",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxt/test-utils": "^3.14.0",
+    "vitest": "^2.1.3",
+    "@vitest/coverage-istanbul": "2.1.3",
+    "@vue/test-utils": "^2.4.6",
+    "jsdom": "^24.0.0"
   }
 }
